--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <header class="page__header">
     <nav class="navbar__menu">
       <!-- Navigation starts as empty UL that will be populated with JS -->
-      <ul id="navbar__list"></ul>
+      <ul class="navbar__menu" id="navbar__list">
+      </ul>
     </nav>
   </header>
   <main>
